force-app/main/default/objects/copado__Sprint__c/fields/copado__Actual_Velocity__c.field-meta.xml
<CustomField>
    <fullName>copado__Actual_Velocity__c</fullName>
    <inlineHelpText>This value is calculated by adding up the total planned points of the user stories in the sprint when their status is changed to Completed. This status can be configured in the Actual Velocity Statuses custom metadata type. Please refer to the Copado Sprint Velocity article for more information.</inlineHelpText>
    <label>Actual Velocity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>