force-app/main/default/objects/copado__Sprint__c/fields/copado__Full_time_resources_in_sprint__c.field-meta.xml
<CustomField>
    <fullName>copado__Full_time_resources_in_sprint__c</fullName>
    <label>Full time resources in sprint</label>
    <precision>7</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>