force-app/main/default/objects/copado__Sprint__c/fields/copado__Story_points__c.field-meta.xml
<CustomField>
    <fullName>copado__Story_points__c</fullName>
    <label>Total Capacity (Points)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>