force-app/main/default/objects/copado__Sprint__c/fields/copado__Team__c.field-meta.xml
<CustomField>
    <fullName>copado__Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Team</label>
    <referenceTo>copado__Team__c</referenceTo>
    <relationshipLabel>Sprints</relationshipLabel>
    <relationshipName>Sprints</relationshipName>
    <type>Lookup</type>
</CustomField>