force-app/main/default/objects/copado__Sprint__c/fields/copado__Working_days_in_sprint__c.field-meta.xml
<CustomField>
    <fullName>copado__Working_days_in_sprint__c</fullName>
    <label>Working days in sprint</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>