force-app/main/default/objects/copado__Sprint__c/validationRules/copado__EndDate_Should_be_Greater_than_StartDate.validationRule-meta.xml
<ValidationRule>
    <fullName>copado__EndDate_Should_be_Greater_than_StartDate</fullName>
    <active>true</active>
    <errorConditionFormula>IF( AND(OR(ISCHANGED(copado__End_Date__c),ISCHANGED(copado__Start_Date__c)), copado__End_Date__c &lt;= copado__Start_Date__c), true, false)</errorConditionFormula>
    <errorMessage>You must introduce an End Date greater than the Start Date.</errorMessage>
</ValidationRule>